docker/minio/minio-ingress-gke.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-ns
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-proj
            port:
              number: 9001

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: minio-ingress
#   namespace: default
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         backend:
#           serviceName: minio
#           servicePort: 9001
#         path: /
